Fix layout bug in saboten story page

--- a/src/components/brand/saboten.module.scss
+++ b/src/components/brand/saboten.module.scss
@@ -78,8 +78,9 @@
             }
 
             .storyFlexLeftDescriptionWrapper {
-                margin-left: auto;
+                //margin-left: auto;
                 padding-right: 64px;
+                text-align: right;
             }
 
             .storyRightImageWrapper {
